query swagger
