# docs/swagger.yaml
@@ -790,6 +790,34 @@ paths:
   /api/products:
     get:
       operationId: get-all-products
+      parameters:
+      - description: sort by
+        enum:
+        - views
+        - price
+        - created_at
+        in: query
+        name: sort_by
+        type: string
+      - description: sort order
+        enum:
+        - ASC
+        - DESC
+        in: query
+        name: sort_order
+        type: string
+      - description: limit
+        enum:
+        - 10
+        - 25
+        - 50
+        in: query
+        name: limit
+        type: integer
+      - description: offset
+        in: query
+        name: offset
+        type: integer
       responses:
         "200":
           description: OK
@@ -812,6 +840,126 @@ paths:
           schema:
             $ref: '#/definitions/handler.errorResponse'
       summary: Get all products from the market
+      tags:
+      - products
+  /api/products/{categoryName}:
+    get:
+      operationId: get-products-by-category
+      parameters:
+      - description: Name of category
+        in: path
+        name: categoryName
+        required: true
+        type: string
+      - description: sort by
+        enum:
+        - views
+        - price
+        - created_at
+        in: query
+        name: sort_by
+        type: string
+      - description: sort order
+        enum:
+        - ASC
+        - DESC
+        in: query
+        name: sort_order
+        type: string
+      - description: limit
+        enum:
+        - 10
+        - 25
+        - 50
+        in: query
+        name: limit
+        type: integer
+      - description: offset
+        in: query
+        name: offset
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.getProductsResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: Get all products by category from the market
+      tags:
+      - products
+  /api/products/{userId}:
+    get:
+      operationId: get-products-by-userId
+      parameters:
+      - description: ID of user
+        in: path
+        name: userId
+        required: true
+        type: integer
+      - description: sort by
+        enum:
+        - views
+        - price
+        - created_at
+        in: query
+        name: sort_by
+        type: string
+      - description: sort order
+        enum:
+        - ASC
+        - DESC
+        in: query
+        name: sort_order
+        type: string
+      - description: limit
+        enum:
+        - 10
+        - 25
+        - 50
+        in: query
+        name: limit
+        type: integer
+      - description: offset
+        in: query
+        name: offset
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.getProductsResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: Get products by UserID
       tags:
       - products
   /api/register:
